# et_webcam_experiments

./: .gitignore  README.md  analysis_with_pyxations.ipynb  analysis_with_pyxations_v2.ipynb  analysis_with_pyxations_v5.ipynb  figure2  gitignore  main.py  pyproject.toml
.ipynb_checkpoints/: analysis_with_pyxations-checkpoint.ipynb  analysis_with_pyxations_v2-checkpoint.ipynb  analysis_with_pyxations_v3-checkpoint.ipynb  analysis_with_pyxations_v5-checkpoint.ipynb  analysis_with_pyxations_v6-checkpoint.ipynb  analysis_with_pyxations_v7-checkpoint.ipynb
antisaccade_experiment/: .~lock.pixeles.csv#  Fix_Sac_detection_block.tsv  Fix_Sac_detection_no_block.tsv  antisaccade_analysis_pyxations.ipynb  antisaccades_analysis.ipynb  antisaccades_analysis_blocked.ipynb  antisaccades_pyxations.ipynb  antisaccades_pyxations_blocked.ipynb  detect_sacc.csv
antisaccade_experiment/_staging/: 100_antisacadas.csv  102_antisacadas.csv  103_antisacadas.csv  123_antisacadas.csv  124_antisacadas.csv
antisaccade_experiment/raw_data/: antisacadas_101.csv  antisacadas_109.csv  antisacadas_110.csv  antisacadas_112.csv  antisacadas_113.csv  antisacadas_117.csv  antisacadas_118.csv  antisacadas_119.csv  antisacadas_125.csv  antisacadas_126.csv  antisacadas_92.csv  antisacadas_99.csv
antisaccade_experiment/saccade_detection/: 100_detect_sacc.csv  100_detect_sacc_trial_0.csv  100_detect_sacc_trial_1.csv  100_detect_sacc_trial_10.csv  (+346 more)
precision_experiment/: data_analysis.ipynb  main.py  precision_analysis.ipynb  precision_analysis_pyxations.ipynb  precision_functions.py
(+225 files in other folders)
