[project]
name = "et-webcam-experiments"
version = "0.1.0"
description = "webcam eye-tracking and cognitive tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "ipykernel>=6.20.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]